switch from dotenv to simple json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Lukas Mouthaan",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.15.2",
-    "dotenv": "^16.4.5"
+    "discord.js": "^14.15.2"
   }
 }
