--- a/config_template.json
+++ b/config_template.json
@@ -1,5 +1,5 @@
 {
   "token": "your_discord_bot_token",
-  "ip": "your_palserver_ip",
-  "port": "your_rest_api_port"
+  "ip": "localhost",
+  "port": 8212
 }
