--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lukas Mouthaan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "discord.js": "^14.15.2"
   }
 }
