Put basic auth in api requests

--- a/config_template.json
+++ b/config_template.json
@@ -1,5 +1,7 @@
 {
   "token": "your_discord_bot_token",
   "ip": "localhost",
-  "port": 8212
+  "port": 8212,
+  "username": "admin",
+  "password": "palserver_admin_password"
 }
