--- a/config_template.json
+++ b/config_template.json
@@ -6,5 +6,6 @@
   "username": "admin",
   "password": "your palserver admin password",
   "publicIp": "your palserver public ip",
-  "serverPassword": "your palserver password"
+  "serverPassword": "your palserver password",
+  "channelId": "your discord channel id"
 }
