Fix players command & put stdout log path in config

--- a/config_template.json
+++ b/config_template.json
@@ -7,5 +7,6 @@
   "password": "your palserver admin password",
   "publicIp": "your palserver public ip",
   "serverPassword": "your palserver password",
-  "channelId": "your discord channel id"
+  "channelId": "your discord channel id",
+  "logPath": "~/Steam/steamapps/common/PalServer/console-log.txt"
 }
