--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.2",
-    "discord.js": "^14.15.2"
+    "discord.js": "^14.15.2",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
   }
 }
